[package]
name = "connections_tui"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
color-eyre = "0.6.5"
ratatui = "0.30.0"
reqwest = "0.13.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = {version = "1.49.0", features = ["full"] }
tui-big-text = "0.8.1"
